# bitfld

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  test.nu
bitfld-macro/: Cargo.toml
bitfld-macro/src/: lib.rs
examples/: basic.rs  bitfield-repr.rs
src/: lib.rs
tests/: unittests.rs  usize-comptime-tests.rs
